# gonzalez-lorenzo.munoz-benjamin.zamora-fernando-Tarea3.2023.1

./: CMakeLists.txt  README  Stage3HelpCode.pro  door.cpp  magnetic_sensor.cpp  magnetic_sensor.h  main.cpp  sensor.cpp
src/: central.cpp  central.h  centralview.cpp  centralview.h  door.cpp  door.h  doorview.cpp  doorview.h  housewindow.cpp  housewindow.h  magnetic_sensor.cpp  magnetic_sensor.h  magneticsensor.cpp  magneticsensorview.cpp  main.cpp  sensor.cpp  sirenview.cpp  sirenview.h  window.cpp  window.h  windowview.cpp  windowview.h
